invidious/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: invidious
  namespace: invidious
  labels:
    app: invidious
spec:
  replicas: 2
  selector:
    matchLabels:
      app: invidious
  template:
    metadata:
      annotations:
        cluster-autoscaler.kubernetes.io/safe-to-evict: "true"
      labels:
        app: invidious
    spec:
      containers:
        - image: quay.io/invidious/invidious:3b39b8c772b57552893fa55eb417189b2976bbe4
          name: invidious
          readinessProbe:
            httpGet:
              path: /api/v1/stats
              port: 3000
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /api/v1/stats
              port: 3000
            periodSeconds: 5
            failureThreshold: 2
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: 250m
              memory: 192Mi
            limits:
              cpu: '2'
              memory: 256Mi
          volumeMounts:
            - name: config
              mountPath: /config
      dnsConfig:
        options:
          - name: ndots
            value: "1"
      enableServiceLinks: false
      nodeSelector:
        node-role.kubernetes.io/hcloud: ""
      tolerations:
        - key: samcday.com/hcloud
          operator: Exists
      volumes:
        - name: config-template
          configMap:
            name: config
        - name: config
          emptyDir: {}
